# cliente-suap-django

./: .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: update-readme.yml
app/: admin.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/static/app/js/: logout.js
app/templates/app/: base.html
app/templates/app/pages/: login.html  profile.html
core/: settings.py  urls.py
suap/: backends.py
