[project]
name = "cliente-suap-django"
version = "1.0.0"
description = "Cliente OAuth2 do SUAP/IFRN para o Django."
authors = [{ name = "Sérgio Dantas", email = "sergiodnts828@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "social-auth-app-django (>=5.5.1,<6.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
]

[project.urls]
repository = "https://github.com/sergiodantasz/cliente-suap-django"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"
djlint = "^1.36.4"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
ignore = ["F401"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
